openvidu-components: Improved user-settings component
- Changed replaceTrack to republishTrack until replaceTrack issue is fixed (https://github.com/OpenVidu/openvidu/pull/700)
- Fixed bug in mat options 
- Added audio detector

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/user-settings/user-settings.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/user-settings/user-settings.component.css
@@ -47,6 +47,12 @@
 	bottom: 0px;
   }
 
+  #audio-wave-container {
+	position: absolute;
+    right: 20px;
+	top: 30px;
+  }
+
   .cameraMessageContainer {
 	height: 100%;
 	width: 100%;
@@ -1074,7 +1080,7 @@
 	  padding: 35px;
 	}
 	.videoContainer{
-	  width: 90%;
+	  width: 100%;
 	}
   }
   @media (min-width: 768px) {
