openvidu-components: Parametrized styles properties

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/audio-wave/audio-wave.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/audio-wave/audio-wave.component.css
@@ -29,7 +29,7 @@
 	max-height: 15px;
 	height: 15px;
 	width: 15px;
-	border-radius: 50%;
+	border-radius: var(--ov-buttons-radius);
 	display: flex;
 	justify-content: space-between;
 }
