--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar id="toolbar" role="heading" fxLayout fxLayoutAlign="center" fxLayoutGap="10px">
 	<div fxFlex="20%" fxLayoutAlign="start center">
 		<div id="img-container">
-			<img id="company-logo" alt="OpenVidu Logo" [src]="logoUrl" />
+			<img id="branding-logo" src='assets/images/openvidu_globe.png'/>
 			<span id="session-title" *ngIf="session && session.sessionId">{{ session.sessionId }}</span>
 		</div>
 	</div>
