--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participants-panel/participants-panel.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participants-panel/participants-panel.component.css
@@ -1,7 +1,7 @@
 .participants-container {
 	margin: 20px;
 	background-color: var(--ov-light-color);
-	border-radius: 5px;
+	border-radius: var(--ov-panel-radius);
 	height: -webkit-fill-available;
 	height: -moz-available;
 }
@@ -19,6 +19,7 @@
 
 .header-container button {
 	margin-left: auto;
+	border-radius: var(--ov-buttons-radius);
 }
 
 .local-participant-container, .remote-participants-container {
