--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
@@ -34,13 +34,17 @@
 	font-size: 24px;
 }
 
-  #company-logo {
+#media-buttons-container button, #menu-buttons-container button {
+	border-radius: var(--ov-buttons-radius);
+}
+
+#branding-logo {
 	background-color: var(--ov-dark-color);
-	border-radius: 5px;
+	border-radius: var(--ov-panel-radius);
 	max-width: 35px;
 	max-height: 35px;
 	padding: 10px;
-  }
+}
 
   #session-title {
 	font-family: 'Ubuntu', sans-serif;
@@ -56,7 +60,7 @@
 	position: absolute;
 	top: 12px;
 	right: 33px;
-	border-radius: 50%;
+	border-radius: var(--ov-buttons-radius);
 	background-color: #ffa600;
 	border: 1px solid #000;
 	z-index: 99999;
@@ -64,7 +68,7 @@
 
   #leave-btn {
 	  background-color: var(--ov-warn-color) !important;
-	  border-radius: 10px !important;
+	  border-radius: var(--ov-leave-button-radius) !important;
 	  width: 60px !important;
   }
 
@@ -92,7 +96,7 @@
   }
 
   @media (max-width: 850px) {
-	#company-logo {
+	#branding-logo {
 	  display: none;
 	}
   }
