openvidu-components: Force mute participant from participants panel

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.css
@@ -23,3 +23,11 @@ mat-list {
 	display: contents;
 }
 
+#action-btn {
+	border-radius: var(--ov-buttons-radius);
+}
+
+.warn-btn {
+	/* background-color: var(--ov-warn-color) !important; */
+	color: var(--ov-warn-color);
+}
