openvidu-components: Refactored nickname container

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
@@ -21,9 +21,10 @@
 	border-radius: var(--ov-panel-radius);
   }
 
-  #dialogNickname {
+  #nickname-input-container {
 	background-color:  #0000005e;
 	border-radius: var(--ov-panel-radius);
+
   }
 
   #closeButton {
