--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.html
@@ -2,7 +2,7 @@
 	<mat-list-item>
 		<mat-icon matListAvatar class="participant-avatar">person</mat-icon>
 		<h3 matLine class="participant-nickname">{{ _participant.nickname }}</h3>
-		<p matLine class="participant-subtitle">{{ _participant | streamsEnabled }}</p>
+		<p matLine class="participant-subtitle">{{ _participant | streamTypesEnabled }}</p>
 		<!-- <p matLine>
 			<span class="participant-subtitle"></span>
 		</p> -->
