openvidu-components: Changed impure pipe to pure to increased efficiency
- Updated the behaviour subject creating a new reference object 
- Made the streamTypesEnabled pipe to pure 
- Fixed update bug in participants panel

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participants-panel/participants-panel.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participants-panel/participants-panel.component.html
@@ -8,14 +8,14 @@
 
 	<div class="scrollable">
 
-		<div class="local-participant-container">
+		<div class="local-participant-container" *ngIf="localParticipant">
 			<ng-container *ngTemplateOutlet="participantPanelItemTemplate; context: { $implicit: localParticipant }"></ng-container>
 			<mat-divider *ngIf="true"></mat-divider>
 		</div>
 
 		<div class="remote-participants-container" *ngIf="remoteParticipants.length > 0">
 
-			<div *ngFor="let participant of remoteParticipants; let lastItem = last">
+			<div *ngFor="let participant of this.remoteParticipants">
 				<ng-container *ngTemplateOutlet="participantPanelItemTemplate; context: { $implicit: participant }"></ng-container>
 			</div>
 		</div>
