--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
@@ -2,7 +2,7 @@
 	<div fxFlex.gt-sm="65%" fxFlex.lt-md="55%" fxLayoutAlign="center center">
 		<ov-layout>
 			<ng-template #stream let-stream>
-				<ov-stream [stream]="stream" [showNickname]="false" [showSettings]="false"></ov-stream>
+				<ov-stream [stream]="stream" [displayParticipantName]="false" [settingsButton]="false"></ov-stream>
 			</ng-template>
 		</ov-layout>
 	</div>
