--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
@@ -14,6 +14,9 @@
 	display: flex;
 	align-items: center;
 }
+#media-buttons-container {
+	max-height: 100%;
+}
 
 #media-buttons-container > *, ::ng-deep #media-buttons-container > * {
 	width: 40px;
