openvidu-components: Fixed layout when is webcomponent
When webcomponent, the layout need more time for initilizating and showing the videos.

--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.scss
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.scss
@@ -74,3 +74,10 @@ $openvidu-components-theme: mat.define-light-theme((
 
 html, body { height: 100%; overflow: hidden;}
 body { margin: 0; font-family: 'Roboto','RobotoDraft',Helvetica,Arial,sans-serif;}
+
+#poster-text {
+	padding: 0px !important;
+}
+ov-chat-panel .text-info {
+	margin: 3px auto !important;
+}
