--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
@@ -15,7 +15,7 @@
 	align-items: center;
 }
 #media-buttons-container {
-	max-height: 100%;
+	max-height: 100% !important;
 }
 
 #media-buttons-container > *, ::ng-deep #media-buttons-container > * {
