openvidu-components: Added toolbar additional buttons directive
Allowed added additional buttons in toolbar component without redefine it

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
@@ -18,7 +18,11 @@
 	max-height: 100% !important;
 }
 
-#media-buttons-container > *, ::ng-deep #media-buttons-container > * {
+#media-buttons-container > button,
+::ng-deep #media-buttons-container > button,
+#media-buttons-container:not(#media-buttons-container > button) button,
+/* Applying css for external additional buttons*/
+::ng-deep #media-buttons-container:not(#media-buttons-container > button) button {
 	width: 40px;
 	height: 40px;
 	background-color: var(--ov-secondary-color);
