openvidu-elements: Added participant panel item elements directive
Allowed to add html elements to participants item

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.css
@@ -5,9 +5,18 @@
 .participant-nickname {
 	font-weight: bold !important;
 }
+
 .participant-action-buttons{
 	display: flex;
-	padding-top: 0px;
+}
+
+ ::ng-deep .participant-action-buttons > *:not(#action-btn) {
+	display: contents;
+}
+
+::ng-deep .participant-action-buttons > *:not(#action-btn) > * {
+	margin: auto;
+
 }
 
 mat-list-item {
