openvidu-components: Added directive for hidding/showing mute button

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.html
@@ -11,7 +11,7 @@
 			<button
 				mat-icon-button
 				id="action-btn"
-				*ngIf="!_participant.local"
+				*ngIf="!_participant.local && showMuteButton"
 				[class.warn-btn]="_participant.isMutedForcibly"
 				(click)="toggleMuteForcibly()"
 			>
